# hls4ml

./: .all-contributorsrc  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  API.html  API.md  CITATION.cff  COMMAND.html  COMMAND.md  CONCEPTS.html  CONCEPTS.md  CONFIG.md  CONTRIBUTING.md  DEPENDENCIES.html  DEPENDENCIES.md  Jenkinsfile  MANIFEST.in  PROFILING.html  PROFILING.md  README.md  REFERENCE.html  REFERENCE.md  RELEASENOTES.html  RELEASENOTES.md  SETUP.html  SETUP.md  STATUS.html  STATUS.md  SUMMARY.md  book.json  command.html  concepts.html  debug.ipynb  details.html  environment.yml  flows.html  genindex.html  hls4ml-dev-keras3.yml  (+33 more)
.github/: PULL_REQUEST_TEMPLATE.md
_book/: COMMAND.html  CONCEPTS.html  DEPENDENCIES.html  PROFILING.html  REFERENCE.html  RELEASENOTES.html  SETUP.html  STATUS.html  index.html  search_index.json
_sources/: concepts.rst.txt  flows.rst.txt  release_notes.rst.txt  setup.rst.txt  status.rst.txt
_static/: documentation_options.js  sphinx_contributors.css
advanced/: accelerator.html  auto.html  bramfactor.html  da.html  extension.html  fifo_depth.html  hgq.html  hgq1.html  model_optimization.html  oneapi.html  plugins.html  precision.html  profiling.html  qonnx.html  snn.html
api/: CONFIGURATION.html  CONFIGURATION.md  HLS-MODEL.html  HLS-MODEL.md  PROFILING.html  PROFILING.md  command.html  concepts.html  configuration.html  hls-model.html  profiling.html  serialization.html
autodoc/: hls4ml.backends.catapult.html  hls4ml.backends.catapult.passes.html  hls4ml.backends.fpga.html  hls4ml.backends.fpga.passes.html  hls4ml.backends.html  hls4ml.backends.libero.html  hls4ml.backends.oneapi.html  hls4ml.backends.oneapi.passes.html  hls4ml.backends.quartus.html  hls4ml.backends.quartus.passes.html  hls4ml.backends.symbolic.html  hls4ml.backends.symbolic.passes.html  hls4ml.backends.vitis.html  hls4ml.backends.vitis.passes.html  hls4ml.backends.vivado.html  hls4ml.backends.vivado.passes.html  hls4ml.backends.vivado_accelerator.html  hls4ml.backends.vivado_accelerator.passes.html  hls4ml.cli.html  hls4ml.contrib.html  hls4ml.converters.html  hls4ml.converters.keras.html  hls4ml.converters.keras_v3.hgq2.html  hls4ml.converters.keras_v3.html  hls4ml.converters.onnx.html  hls4ml.converters.pytorch.html  hls4ml.html  hls4ml.model.flow.html  hls4ml.model.html  hls4ml.model.optimizer.html  hls4ml.model.optimizer.passes.html  hls4ml.optimization.dsp_aware_pruning.html  hls4ml.optimization.dsp_aware_pruning.keras.html  hls4ml.optimization.dsp_aware_pruning.objectives.html  hls4ml.optimization.html  hls4ml.optimization.keras.html  hls4ml.optimization.objectives.html  hls4ml.report.html  hls4ml.templates.html  hls4ml.utils.html  (+1 more)
backend/: accelerator.html  catapult.html  oneapi.html  quartus.html  sr.html  vitis.html
bdt_utils/: AddReduce.vhd  Adder.vhd  BDT.h  BDT.vhd  BDTTestbench.vhd  BDTTop.vhd  Constants.vhd  PkgDebug.vhd  SimulationInput.vhd  SimulationOutput.vhd  TestUtil.vhd  Tree.vhd  Types.vhd  bdt_test.cpp  bdt_top.cpp  decision_tree.cpp  decision_tree.h  decision_tree_test.cpp  decision_tree_top.cpp  parameters.h  run_bdt_test.sh  synth.tcl
contrib/: garnet.py  interaction_network.py  kl_layer.py  nnet_distance.h
doc/: Makefile  README.md  nnet_large_layer.dia  nnet_large_layer.py  valid_rf.py
docs/: Makefile  README-KERAS.md  attr_doc_gen.py  command.rst  concepts.rst  conf.py  details.rst  extension.rst  flows.rst  index.rst  reference.rst  release_notes.rst  requirements.txt  setup.rst  status.rst
example-models/: .gitignore  extract_roc.py  keras-config-1layer.yml  keras-config-3layer-batch-norm.yml  keras-config-3layer-binary.yml  keras-config-3layer-ternary.yml  keras-config-3layer.yml  keras-config-mnist.yml  keras-config.yml  onnx-config.yml  print-reports.sh  pytorch-config.yml  tf-config.yml
experiments/: conv1d_gru_example.ipynb  requirements.txt
frontend/: keras.html  pytorch.html  qonnx.html
galapagos/: Makefile  build_prj.tcl  kern_send.cpp  kernel.cpp  kernel.h  kernel.hpp  logical.xml  main.cpp  map.xml  myproject.h  myproject_galapagos.cpp  myproject_galapagos_tb.cpp  node.cpp  out  parameters.h  sw_kern.cpp  test_galapagos.cpp  test_galapagos.hpp
hls-template/: build_prj.tcl  myproject_test.cpp
hls-writer/: hls_model.py  hls_writer.py  templates.py
hls4ml/: __init__.py
hls4ml/templates/coyote_accelerator/: CMakeLists.txt  build_lib.sh  host_libs.cpp  host_libs.hpp  model_wrapper.cpp  model_wrapper.hpp  myproject_host.cpp  myproject_test.cpp  vfpga_top.svh
hls4ml/templates/coyote_accelerator/nnet_utils/: nnet_axi_utils.h  nnet_axi_utils_stream.h
hls4ml/templates/oneapi/: CMakeLists.txt  build_lib.sh  exception_handler.hpp  myproject_bridge.cpp  myproject_test.cpp
hls4ml/templates/oneapi/firmware/: defines.h  model.cpp  myproject.cpp  myproject.h  parameters.h
hls4ml/templates/oneapi/firmware/nnet_utils/: nnet_activation.h  nnet_activation.h.bak  nnet_activation_stream.h  nnet_activation_stream.h.bak  nnet_batchnorm.h  nnet_batchnorm.h.bak  nnet_batchnorm_stream.h  nnet_batchnorm_stream.h.bak  nnet_code_gen.h  nnet_common.h  nnet_common.h.bak  nnet_conv1d.h  nnet_conv1d_resource.h  nnet_conv1d_resource.h.bak  nnet_conv1d_stream.h  nnet_conv1d_stream.h.bak  nnet_conv2d.h  nnet_conv2d_resource.h  nnet_conv2d_resource.h.bak  nnet_conv2d_stream.h  nnet_conv2d_stream.h.bak  nnet_data_movement.h  nnet_dense.h  nnet_dense.h.bak  nnet_dense_compressed.h  nnet_dense_stream.h  nnet_depthconv1d.h  nnet_depthconv1d_resource.h  nnet_depthconv1d_resource.h.bak  nnet_depthconv2d.h  nnet_depthconv2d_resource.h  nnet_depthconv2d_resource.h.bak  nnet_einsum.h  nnet_einsum_dense.h  nnet_embed.h  nnet_embed.h.bak  nnet_embed_stream.h  nnet_embed_stream.h.bak  nnet_helpers.h  nnet_merge.h  (+34 more)
hls4ml/templates/oneapi/utils/: dnnl_utils.hpp  nnet_helpers.h
intro/: faq.html  introduction.html  reference.html  release_notes.html  setup.html  status.html
ir/: attributes.html  flows.html  ir.html  modelgraph.html  multimodelgraph.html
js/: polyfill_es6.min.js
keras-to-hls/: README.md  (+24 more)
(+3627 files in other folders)
