[bumpversion]
current_version = 0.6.0
commit = True
message = 
	[SKIP] version bump {current_version} -> {new_version}
	
	{$COMMIT_MSG}
tag = True
tag_message = 
	    version bump {current_version} -> {new_version}
	    
	    {$COMMIT_MSG}

[bumpversion:file:hls4ml/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
description-file = README.md

[options]
python_requires = >=3.7

[options.entry_points]
pytest_randomly.random_seeder = 
	hls4ml = hls4ml:reseed
