[metadata]
description-file = README.md
name = hls4ml
author = HLS4ML Team
author_email = hls4ml.help@gmail.com
license = Apache 2.0
description = Machine learning in FPGAs using HLS
url = https://fastmachinelearning.org/hls4ml
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages = find:
install_requires =
    numpy
    six
    pyyaml
    h5py
    onnx>=1.4.0
    calmjs.parse
    tabulate
    pydigitalwavetools==1.1
    qkeras
include_package_data = True
scripts = scripts/hls4ml

[options.entry_points]
pytest_randomly.random_seeder =
    hls4ml = hls4ml:reseed

[options.extras_require]
profiling = 
    pandas
    seaborn
    matplotlib
