[metadata]
name = hls4ml
description = Machine learning in FPGAs using HLS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://fastmachinelearning.org/hls4ml
author = hls4ml Team
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
description_file = README.md

[options]
packages = find:
install_requires =
    calmjs.parse
    h5py
    numpy
    onnx>=1.4.0
    pydigitalwavetools==1.1
    pyyaml
    qkeras
    six
    tabulate
python_requires = >=3.7
include_package_data = True
scripts = scripts/hls4ml

[options.entry_points]
pytest_randomly.random_seeder =
    hls4ml = hls4ml:reseed

[options.extras_require]
profiling =
    matplotlib
    pandas
    seaborn

[check-manifest]
ignore =
    .github/**
    docs/**
    .pre-commit-config.yaml
    Jenkinsfile
    hls4ml/_version.py
